Add header & hero html and accompanying css

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,27 @@
     <link rel="stylesheet" href="styles.css">
     <title>Landing Page</title>
 </head>
+
 <body>
-    
+    <div class="header">
+        <div class="header-logo">Header Logo</div>
+        <ul class="navbar">
+            <li><a href="#">header link one</a></li>
+            <li><a href="#">header link two</a></li>
+            <li><a href="#">header link three</a></li>
+        </ul>
+    </div>
+    <div class="hero">
+        <div class="hero-left">
+            <div class="main-text">This website is awesome</div>
+            <div class="secondary-text">The awesome nature of this website makes beholding its awesomness too awesome
+                for anything but this subtext.</div>
+            <input class="sign-up" type="button" value="Sign up">
+        </div>
+        <div class="hero-right">
+            <div class="image-placeholder">this is a placeholder for an image</div>
+        </div>
+    </div>
 </body>
+
 </html>
