Complete landing page html & css

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <li><a href="#">header link three</a></li>
         </ul>
     </div>
+    <!-- end header -->
     <div class="hero">
         <div class="hero-left">
             <div class="main-text">This website is awesome</div>
@@ -28,6 +29,67 @@
         <div class="hero-right">
             <div class="image-placeholder">this is a placeholder for an image</div>
         </div>
+    </div>
+    <!-- end hero -->
+    <div class="information">
+        <div class="information-header">
+            Some random information
+        </div>
+        <div class="image-section">
+            <div class="image-holder">
+                <div class="image"></div>
+                <div class="image-subtext">
+                    this is some subtext under an illustration or image
+                </div>
+            </div>
+            <div class="image-holder">
+                <div class="image"></div>
+                <div class="image-subtext">
+                    this is some subtext under an illustration or image
+                </div>
+            </div>
+            <div class="image-holder">
+                <div class="image"></div>
+                <div class="image-subtext">
+                    this is some subtext under an illustration or image
+                </div>
+            </div>
+            <div class="image-holder">
+                <div class="image"></div>
+                <div class="image-subtext">
+                    this is some subtext under an illustration or image
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- end information -->
+    <div class="quote-container">
+        <div class="quote">
+            This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
+            <div class="author-name">
+                - Thor, God of Thunder
+            </div>
+        </div>
+    </div>
+    <!-- end quote -->
+    <div class="call-container">
+        <div class="call-box">
+            <div class="call-left">
+                <div class="call-header">
+                    Call to action! It's time!
+                </div>
+                <div class="call-text">
+                    Sign up for our product by clicking that button right over there!
+                </div>
+            </div>
+            <div class="call-right">
+                <input class="call-button" type="button" value="Sign up">
+            </div>
+        </div>
+    </div>
+    <!-- end call to action -->
+    <div class="footer">
+        <div class="text">Copyright &copy; The Odin Project 2021</div>
     </div>
 </body>
 
